[package]
name = "log-receiver"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37", features = ["full"] }
dotenv = "0.15.0"
http = "1.1.0"
hyper = "1.3.1"
serde = { version = "1.0.200", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
aes-siv = "0.7.0"
hex = "0.4.3"
json-canon = "0.1.3"
serde_json = "1.0.116"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
hmac = "0.12.1"
sha1 = "0.10.6"

[dev-dependencies]
pretty_assertions = "1.3.0"
rusty-hook = "0.11.2"
