[package]
name = "log-receiver"
version = "1.5.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
axum = "0.7.5"
base64 = "0.22.1"
dotenv = "0.15.0"
hmac = "0.12.1"
http = "1.1.0"
hyper = "1.3.1"
json-canon = "0.1.3"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sha1 = "0.10.6"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
versa = "0.7.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
rusty-hook = "0.11.2"
