[package]
name = "log-receiver"
version = "1.8.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
http = "1.1.0"
hyper = "1.3.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
versa = { version = "0.18.0", features = ["client_receiver"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
rusty-hook = "0.11.2"
